docs: fix docs
